# bitcoin_API

./: .gitignore  Dockerfile  README.md  docker-compose.yml  nginx.conf  pyproject.toml
app/: .env  .gitignore  main.py  test.py
app/core/: config.py  session.py
app/crud/: api_service.py  chart_service.py  coin_service.py  currency_service.py  data_manager.py  ohlc_service.py  redis_service.py  utilities.py
app/db/: __init__.py  api_keys.py  chart.py  coin.py  currency.py  date_time.py  ohlc.py
app/schemas/: schemas.py  timeseries.py
nginx/: Dockerfile  nginx.conf
