[project]
name = "bitcoin-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi-cli>=0.0.20",
    "fastapi-utilities>=0.3.1",
    "fastapi[standard]>=0.128.0",
    "pyodbc>=5.3.0",
    "redis>=7.1.0",
    "requests>=2.32.5",
    "sqlmodel>=0.0.31",
    "streamlit>=1.54.0",
    "typing-inspect>=0.9.0",
]
